<resources>
    <string name="app_name">Buddystars</string>

    <string name="txt_user">USUARIO</string>
    <string name="txt_pass">CONTRASEÑA</string>

    <string name="btn_enter">ENVIAR</string>
    <string name="btn_forgot_pass">¿Olvidaste tu contraseña?</string>

    <string name="btn_start">INICIAR</string>
    <string name="btn_send">ENVIAR</string>
    <string name="btn_see_more">Ver más</string>
    <string name="btn_select_photo">Seleccionar foto</string>

    <string name="error_connectivity">No se encontró señal de internet.</string>
    <string name="desc"></string>

    <string name="txt_error">Error</string>
    <string name="txt_alert">¡Ups!</string>

    <string name="bt_close">Cerrar</string>
    <string name="bt_add_farmer">Guardar</string>

    <string name="txt_success_farmer">Registro exitoso</string>


    <string name="txt_error_user">Debes introducir el campo usuario</string>
    <string name="txt_error_pass">Debes introducir el campo contraseña</string>

    <string name="txt_error_name">Debes introducir el campo nombre</string>
    <string name="txt_error_last_name">Debes introducir el campo apellido</string>
    <string name="txt_error_mail">Debes introducir el campo correo</string>
    <string name="txt_error_phone">Debes introducir el campo teléfono para continuar</string>
    <string name="txt_error_code">Debes introducir el código de registro para continuar</string>
    <string name="txt_error_portability">Debes introducir el código de portabilidad</string>
    <string name="txt_error_diary">Debes introducir la fecha para contactar</string>

    <string name="txt_sending">Enviando</string>
    <string name="title_activity_homeactivity">Homeactivity</string>

    <string name="txt_menu_data_base">BASE DE DATOS</string>
    <string name="txt_menu_add">Agregar</string>
    <string name="txt_menu_diary">Agenda</string>
    <string name="txt_menu_register">ALTAS</string>
    <string name="txt_menu_news">Nuevas</string>
    <string name="txt_menu_portability">Portabilidad</string>
    <string name="txt_menu_register_sim">Alta chip</string>
    <string name="txt_menu_reports">REPORTES</string>
    <string name="txt_menu_points">PUNTOS</string>
    <string name="txt_menu_support">SOPORTE</string>
    <string name="txt_menu_logout">Salir</string>

    <string name="txt_register_name">Nombre*</string>
    <string name="txt_register_last_name">Apellido*</string>
    <string name="txt_register_phone">Teléfono</string>
    <string name="txt_register_mail">Correo*</string>
    <string name="txt_register_diary">Agenda</string>
    <string name="txt_register_code">Código Alta</string>
    <string name="txt_register_portability">Código Portabilidad</string>
    <string name="txt_alta_sim">Alta Chip</string>

    <string name="txt_title_add">Nuevo</string>
    <string name="txt_title_add_chip">Alta Chip</string>
    <string name="txt_title_portability">Portabilidad</string>
    <string name="txt_tilte_go_to">Ir A</string>

    <string name="txt_register_customer">Cliente</string>
    <string name="txt_register_operation_code">Código Operación</string>
    <string name="txt_register_sim">Código Chip</string>
    <string name="txt_register_amount">Monto de Alta</string>

    <string name="txt_support_phone">56.78.90.45</string>
    <string name="txt_support_mail">Enviar Correo</string>
    <string name="txt_support_question_comment">Pregunta /Comentario</string>
    <string name="btn_support_close">[ x ]</string>
    <string name="txt_support_error">Tu pregunta/comentario debe tener al menos 10 caracteres</string>

    <string name="bt_call">Llamar</string>
    <string name="bt_mail">Mensaje</string>
    <string name="bt_contact">Contactar</string>
    <string name="txt_points_adds">Altas Nuevas</string>
    <string name="txt_points_portability">Portabilidad</string>

    <string name="txt_beta_add">Altas</string>
    <string name="txt_beta_portability">Portabilidad</string>
    <string name="txt_beta_adds">Nuevas</string>
    <string name="txt_beta_reports">Buddystars Beta</string>
    <string name="txt_beta_circle">Meta</string>

    <string name="txt_title_registers">Registros</string>

    <string name="prueba">prueba</string>

    <string-array name="mont_add">
        <item>$199</item>
        <item>$349</item>
        <item>$449</item>
        <item>$549</item>
        <item>$749</item>
        <item>$999</item>

    </string-array>
    <string name="txt_seleccion_una_opcion">Selecciona una opcion</string>
    <string name="title_gracias">Gracias</string>
    <string name="codigo_exitoso">El código ha sido guardado</string>
    <string name="cliente_exitoso">El cliente ha sido guardado</string>
    <string name="confirmar_llamada">¿Quieres llamar al 55-50-01-58-21?</string>
    <string name="confirmar_mail">¿Quieres mandar un correo a soporte@movistar.com?</string>
    <string name="cerrar">Cerrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="llamar">Llamar</string>
    <string name="Escribir">Escribir</string>

    <string name="txt_schedules">Horarios</string>
    <string name="facebook_app_id">255385374800034</string>

    <string name="permission_rationale_location">Buddystars necesita permiso que otorgues permiso para realizar llamadas.</string>
    <string name="location_permission_denied">Buddystars Requiere permiso para realizar llamadas. Por favor inténtalo nuevamente y otorga el permiso.\nSi el permiso ha sido negado permanentemente, puedes habilitarlo desde las configuraciones del sistema.</string>
    <string name="permission_required_toast">Buddystars Requiere permiso para realizar llamadas</string>
    <!--<string name="map_not_ready">La llamada no está disponible</string>-->


    <string name="first_text_required">Te faltan</string>
    <string name="second_text_required">personas para llegar a la meta</string>
    <string name="web_page_url">http://www.movistar.com.mx/promociones/cambiate-a-movistar/?utm_source=google_p&amp;utm_medium=sem_desk&amp;utm_content=m_portabilidad_exacta&amp;utm_campaign=product_marca_generica_portabilidad&amp;gclid=CK2S9Obq68sCFQUMaQodciABdQ&amp;gclsrc=aw.ds&amp;dclid=CJLAj-fq68sCFQ90AQodcHUDBA</string>
    <string name="loreim">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
