<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center|top">

    <include layout="@layout/header_portability"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A5D464">

        <TextView
            style="@style/title_fragment_register"
            android:text="@string/txt_title_portability"
            android:textSize="14sp"/>

        <TextView
            style="@style/title_fragment_register"
            android:layout_toLeftOf="@+id/btn_trademark"
            android:layout_toStartOf="@+id/btn_trademark"
            android:text="@string/txt_tilte_go_to"
            android:textSize="10sp"/>

        <ImageButton
            android:id="@+id/btn_trademark"
            style="@style/image_button_fragment_register"/>

    </RelativeLayout>


    <TextView
        style="@style/register_text"
        android:text="@string/txt_register_customer"/>

    <EditText
        android:id="@+id/et_name_full"
        style="@style/register_edit_text"
        android:enabled="false"
        android:background="@drawable/bt_select"/>

    <TextView
        style="@style/register_text"
        android:text="@string/txt_register_operation_code"/>

    <EditText
        android:id="@+id/et_code_operation"
        style="@style/register_edit_text"
        android:background="@drawable/txt_textfield"/>

    <TextView
        style="@style/register_text"
        android:text="@string/txt_register_amount"/>

    <Spinner
        android:id="@+id/et_cost"
        style="@style/register_edit_text"
        android:background="@drawable/bt_select"/>


    <Button
        android:id="@+id/btn_send_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_login"
        android:text="@string/btn_send"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="40sp"/>

</LinearLayout>

