<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".home.LoginActivity">

    <include layout="@layout/header_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_username"
            android:id="@+id/txt_username"
            android:hint="@string/txt_user"
            android:gravity="center_horizontal|bottom"
            android:paddingBottom="10sp"
            android:maxLines="1"
            android:layout_marginBottom="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_password"
            android:id="@+id/txt_password"
            android:hint="@string/txt_pass"
            android:inputType="textPassword"
            android:gravity="center_horizontal|bottom"
            android:paddingBottom="10sp"
            android:maxLines="1"
            android:layout_marginTop="20sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_login"
            android:text="@string/btn_send"
            android:paddingTop="15sp"
            android:onClick="login"
            android:paddingBottom="15sp"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="40sp"/>

    </LinearLayout>

</RelativeLayout>
